--- a/src/app/css/style.css
+++ b/src/app/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.cdnfonts.com/css/general-sans");
+/* General Sans loaded async via AsyncFontStylesheet to avoid render-blocking (PageSpeed) */
 
 @import "swiper/css";
 @import "swiper/css/free-mode";
